--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "86309833-fa20-461f-b05f-5690ba361b7d"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
